Creado mediante Colaboratory

--- a/4_DataWrangling/intro_to_pandas.ipynb
+++ b/4_DataWrangling/intro_to_pandas.ipynb
@@ -65,7 +65,7 @@
         "id": "rHLcriKWLRe4"
       },
       "source": [
-        "# Intro to pandas"
+        " # Introducción rápida a Pandas"
       ]
     },
     {
@@ -74,11 +74,11 @@
         "id": "QvJBqX8_Bctk"
       },
       "source": [
-        "**Learning Objectives:**\n",
-        "  * Gain an introduction to the `DataFrame` and `Series` data structures of the *pandas* library\n",
-        "  * Access and manipulate data within a `DataFrame` and `Series`\n",
-        "  * Import CSV data into a *pandas* `DataFrame`\n",
-        "  * Reindex a `DataFrame` to shuffle data"
+        "**Objetivos de aprendizaje:**\n",
+        "  * Obtener una introducción a las estructuras de datos de `DataFrame` y `Series` de la biblioteca de *Pandas*\n",
+        "  * Acceder y manipular datos dentro de `DataFrame` y `Series`\n",
+        "  * Importar datos CSV a un `DataFrame` de *Pandas*\n",
+        "  * Reindexar un `DataFrame` para obtener datos aleatorios"
       ]
     },
     {
@@ -87,8 +87,8 @@
         "id": "TIFJ83ZTBctl"
       },
       "source": [
-        "[*pandas*](http://pandas.pydata.org/) is a column-oriented data analysis API. It's a great tool for handling and analyzing input data, and many ML frameworks support *pandas* data structures as inputs.\n",
-        "Although a comprehensive introduction to the *pandas* API would span many pages, the core concepts are fairly straightforward, and we'll present them below. For a more complete reference, the [*pandas* docs site](http://pandas.pydata.org/pandas-docs/stable/index.html) contains extensive documentation and many tutorials."
+        " [*pandas*](http://pandas.pydata.org/) es una API de análisis de datos en columnas, ideal para manipular y analizar datos de entrada. Además, muchos marcos de trabajo de AA admiten las estructuras de datos *pandas* como entradas.\n",
+        "Si bien una introducción detallada a la API de *pandas* abarcaría muchas páginas, los conceptos principales que presentamos a continuación son simples. Para obtener una referencia más completa, el [sitio de documentación de *pandas*](http://pandas.pydata.org/pandas-docs/stable/index.html) incluye una documentación exhaustiva y numerosos instructivos."
       ]
     },
     {
@@ -97,9 +97,9 @@
         "id": "s_JOISVgmn9v"
       },
       "source": [
-        "## Basic Concepts\n",
+        " ## Conceptos básicos\n",
         "\n",
-        "The following line imports the *pandas* API and prints the API version:"
+        "La siguiente línea importa la API de *pandas* e imprime la versión de la API:"
       ]
     },
     {
@@ -122,12 +122,12 @@
         "id": "daQreKXIUslr"
       },
       "source": [
-        "The primary data structures in *pandas* are implemented as two classes:\n",
+        " Las estructuras de datos principales en *pandas* están implementadas en dos clases:\n",
         "\n",
-        "  * **`DataFrame`**, which you can imagine as a relational data table, with rows and named columns.\n",
-        "  * **`Series`**, which is a single column. A `DataFrame` contains one or more `Series` and a name for each `Series`.\n",
+        "  * **`DataFrame`**, que puedes imaginar como una tabla de datos relacional, con filas y columnas con nombre.\n",
+        "  * **`Series`**, que es una columna simple. Una clase `DataFrame` incluye una o más `Series` y un nombre para cada `Series`.\n",
         "\n",
-        "The data frame is a commonly used abstraction for data manipulation. Similar implementations exist in [Spark](https://spark.apache.org/) and [R](https://www.r-project.org/about.html)."
+        "El marco de datos es una abstracción que se usa normalmente para manipular datos. Hay implementaciones similares en [Spark](https://spark.apache.org/) y [R](https://www.r-project.org/about.html)."
       ]
     },
     {
@@ -136,7 +136,7 @@
         "id": "fjnAk1xcU0yc"
       },
       "source": [
-        "One way to create a `Series` is to construct a `Series` object. For example:"
+        " Una manera de crear una `Series` es construir un objeto de `Series`. Por ejemplo:"
       ]
     },
     {
@@ -156,7 +156,7 @@
         "id": "U5ouUp1cU6pC"
       },
       "source": [
-        "`DataFrame` objects can be created by passing a `dict` mapping `string` column names to their respective `Series`. If the `Series` don't match in length, missing values are filled with special [NA/NaN](http://pandas.pydata.org/pandas-docs/stable/missing_data.html) values. Example:"
+        " Los objetos de `DataFrame` pueden crearse al enviar un `dict` que asigne nombres de columnas de `string` a sus `Series` correspondientes. Si las `Series` no coinciden con la longitud, los valores que falten se completan con valores [NA/NaN](http://pandas.pydata.org/pandas-docs/stable/missing_data.html) especiales. Ejemplo:"
       ]
     },
     {
@@ -179,7 +179,7 @@
         "id": "oa5wfZT7VHJl"
       },
       "source": [
-        "But most of the time, you load an entire file into a `DataFrame`. The following example loads a file with California housing data. Run the following cell to load the data and create feature definitions:"
+        " Pero por lo general, cargas un archivo completo en un `DataFrame`. El siguiente ejemplo carga un archivo con datos de viviendas de California. Ejecuta la siguiente celda para cargar los datos y crear definiciones de funciones:"
       ]
     },
     {
@@ -200,7 +200,7 @@
         "id": "WrkBjfz5kEQu"
       },
       "source": [
-        "The example above used `DataFrame.describe` to show interesting statistics about a `DataFrame`. Another useful function is `DataFrame.head`, which displays the first few records of a `DataFrame`:"
+        " En el ejemplo de arriba, se usó `DataFrame.describe` para mostrar estadísticas interesantes sobre un `DataFrame`. Otra función útil es `DataFrame.head`, que muestra los primeros registros de un `DataFrame`:"
       ]
     },
     {
@@ -220,7 +220,7 @@
         "id": "w9-Es5Y6laGd"
       },
       "source": [
-        "Another powerful feature of *pandas* is graphing. For example, `DataFrame.hist` lets you quickly study the distribution of values in a column:"
+        " Otra función util de *pandas* es la generación de gráficos. Por ejemplo, `DataFrame.hist` permite estudiar rápidamente la distribución de los valores en una columna:"
       ]
     },
     {
@@ -240,9 +240,9 @@
         "id": "XtYZ7114n3b-"
       },
       "source": [
-        "## Accessing Data\n",
+        " ## Acceso a los datos\n",
         "\n",
-        "You can access `DataFrame` data using familiar Python dict/list operations:"
+        "Puedes acceder a los datos de `DataFrame` mediante las operaciones convencionales de dict/list de Python:"
       ]
     },
     {
@@ -288,7 +288,7 @@
         "id": "65g1ZdGVjXsQ"
       },
       "source": [
-        "In addition, *pandas* provides an extremely rich API for advanced [indexing and selection](http://pandas.pydata.org/pandas-docs/stable/indexing.html) that is too extensive to be covered here."
+        " Además, *pandas* proporciona una API muy enriquecida para una [indexación y selección](http://pandas.pydata.org/pandas-docs/stable/indexing.html) avanzadas, que es un tema demasiado amplio como para cubrirlo aquí."
       ]
     },
     {
@@ -297,9 +297,9 @@
         "id": "RM1iaD-ka3Y1"
       },
       "source": [
-        "## Manipulating Data\n",
+        " ## Manipulación de datos\n",
         "\n",
-        "You may apply Python's basic arithmetic operations to `Series`. For example:"
+        "Puedes aplicar operaciones aritméticas básicas de Python a las `Series`. Por ejemplo:"
       ]
     },
     {
@@ -319,7 +319,7 @@
         "id": "TQzIVnbnmWGM"
       },
       "source": [
-        "[NumPy](http://www.numpy.org/) is a popular toolkit for scientific computing. *pandas* `Series` can be used as arguments to most NumPy functions:"
+        " [NumPy](http://www.numpy.org/) es un kit de herramientas popular para el cálculo científico. Las `Series` de *pandas* pueden usarse como argumentos para la mayoría de las funciones NumPy:"
       ]
     },
     {
@@ -341,10 +341,9 @@
         "id": "xmxFuQmurr6d"
       },
       "source": [
-        "For more complex single-column transformations, you can use `Series.apply`. Like the Python [map function](https://docs.python.org/2/library/functions.html#map), \n",
-        "`Series.apply` accepts as an argument a [lambda function](https://docs.python.org/2/tutorial/controlflow.html#lambda-expressions), which is applied to each value.\n",
+        " Para obtener información sobre transformaciones más complejas de una sola columna, puedes usar `Series.apply`. Al igual que la función [función map](https://docs.python.org/2/library/functions.html#map) de Python, `Series.apply` acepta como argumento una función [función lambda](https://docs.python.org/2/tutorial/controlflow.html#lambda-expressions), que se aplica a cada valor.\n",
         "\n",
-        "The example below creates a new `Series` that indicates whether `population` is over one million:"
+        "El siguiente ejemplo crea una nueva `Series` que indica si la `population` es superior a un millón:"
       ]
     },
     {
@@ -364,8 +363,8 @@
         "id": "ZeYYLoV9b9fB"
       },
       "source": [
-        "\n",
-        "Modifying `DataFrames` is also straightforward. For example, the following code adds two `Series` to an existing `DataFrame`:"
+        " \n",
+        "Modificar `DataFrames` también es simple. Por ejemplo, el siguiente código agrega dos `Series` a un `DataFrame` existente:"
       ]
     },
     {
@@ -387,16 +386,16 @@
         "id": "6qh63m-ayb-c"
       },
       "source": [
-        "## Exercise #1\n",
+        " ## Ejercicio n.º 1\n",
         "\n",
-        "Modify the `cities` table by adding a new boolean column that is True if and only if *both* of the following are True:\n",
+        "Para modificar la tabla de `cities`, agrega una nueva columna booleana que sea Verdadera si y solo si *ambos* de los siguientes valores son Verdaderos:\n",
         "\n",
-        "  * The city is named after a saint.\n",
-        "  * The city has an area greater than 50 square miles.\n",
+        "  * La ciudad le debe su nombre a un santo.\n",
+        "  * La ciudad tiene un área superior a 50 millas cuadradas.\n",
         "\n",
-        "**Note:** Boolean `Series` are combined using the bitwise, rather than the traditional boolean, operators. For example, when performing *logical and*, use `&` instead of `and`.\n",
+        "**Nota:** Las `Series` booleanas se combinan en función de los bits, en lugar de los operadores booleanos tradicionales. Por ejemplo, cuando utilices *logical and*, usa `&` en lugar de `and`.\n",
         "\n",
-        "**Hint:** \"San\" in Spanish means \"saint.\""
+        "**Hint:** \"San\" en español representa \"santo\"."
       ]
     },
     {
@@ -416,9 +415,9 @@
         "id": "YHIWvc9Ms-Ll"
       },
       "source": [
-        "### Solution\n",
+        " ### Solución\n",
         "\n",
-        "Click below for a solution."
+        "Haz clic a continuación para obtener una solución."
       ]
     },
     {
@@ -439,10 +438,10 @@
         "id": "f-xAOJeMiXFB"
       },
       "source": [
-        "## Indexes\n",
-        "Both `Series` and `DataFrame` objects also define an `index` property that assigns an identifier value to each `Series` item or `DataFrame` row. \n",
+        " ## Índices\n",
+        "Los objetos `Series` y `DataFrame` también definen una propiedad de `index` que asigna un valor de identificador a cada elemento `Series` o fila `DataFrame`.\n",
         "\n",
-        "By default, at construction, *pandas* assigns index values that reflect the ordering of the source data. Once created, the index values are stable; that is, they do not change when data is reordered."
+        "De forma predeterminada, en la construcción, *pandas* asigna valores de índice que reflejan la solicitud de los datos de origen. Una vez creados, los valores de índice son estables, es decir, no cambian cuando cambia el orden de los datos."
       ]
     },
     {
@@ -473,7 +472,7 @@
         "id": "hp2oWY9Slo_h"
       },
       "source": [
-        "Call `DataFrame.reindex` to manually reorder the rows. For example, the following has the same effect as sorting by city name:"
+        " Llama `DataFrame.reindex` para cambiar el orden de las filas de forma manual. Por ejemplo, la siguiente acción tiene el mismo efecto que ordenar los valores por nombre de ciudad:"
       ]
     },
     {
@@ -493,8 +492,8 @@
         "id": "-GQFz8NZuS06"
       },
       "source": [
-        "Reindexing is a great way to shuffle (randomize) a `DataFrame`. In the example below, we take the index, which is array-like, and pass it to NumPy's `random.permutation` function, which shuffles its values in place. Calling `reindex` with this shuffled array causes the `DataFrame` rows to be shuffled in the same way.\n",
-        "Try running the following cell multiple times!"
+        " La reindexación es una excelente manera de seleccionar un `DataFrame` de forma aleatoria. En el ejemplo que se muestra a continuación, tomamos el índice, que es del tipo matriz, y lo enviamos a la función `random.permutation` de NumPy, que selecciona sus valores de forma aleatoria. Utilizar la `reindexación` con esta matriz aleatoria provoca que las filas de `DataFrame` se seleccionen de forma aleatoria de la misma manera.\n",
+        "¡Prueba ejecutar la siguiente celda varias veces!"
       ]
     },
     {
@@ -514,7 +513,7 @@
         "id": "fSso35fQmGKb"
       },
       "source": [
-        "For more information, see the [Index documentation](http://pandas.pydata.org/pandas-docs/stable/indexing.html#index-objects)."
+        " Para obtener más información, consulta [Documentación de índice](http://pandas.pydata.org/pandas-docs/stable/indexing.html#index-objects)."
       ]
     },
     {
@@ -523,9 +522,9 @@
         "id": "8UngIdVhz8C0"
       },
       "source": [
-        "## Exercise #2\n",
+        " ## Ejercicio n.º 2\n",
         "\n",
-        "The `reindex` method allows index values that are not in the original `DataFrame`'s index values. Try it and see what happens if you use such values! Why do you think this is allowed?"
+        "El método de `reindex` permite los valores de índice que no están en los valores de índice originales de `DataFrame`. Pruébalo y observa lo que sucede si usas esos valores. ¿Por qué supones que los permite?"
       ]
     },
     {
@@ -545,9 +544,9 @@
         "id": "TJffr5_Jwqvd"
       },
       "source": [
-        "### Solution\n",
+        " ### Solución\n",
         "\n",
-        "Click below for the solution."
+        "Haz clic a continuación para conocer la solución."
       ]
     },
     {
@@ -556,7 +555,7 @@
         "id": "8oSvi2QWwuDH"
       },
       "source": [
-        "If your `reindex` input array includes values not in the original `DataFrame` index values, `reindex` will add new rows for these \"missing\" indices and populate all corresponding columns with `NaN` values:"
+        " Si la matriz de la entrada `reindex` incluye valores que no se encuentran en los valores de índice originales `DataFrame`, `reindex` agregará nuevas filas para esos índices \"faltantes\" y completará todas las columnas correspondientes con los valores `NaN`:"
       ]
     },
     {
@@ -576,12 +575,10 @@
         "id": "2l82PhPbwz7g"
       },
       "source": [
-        "This behavior is desirable because indexes are often strings pulled from the actual data (see the [*pandas* reindex\n",
-        "documentation](http://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.reindex.html) for an example\n",
-        "in which the index values are browser names).\n",
+        " Este comportamiento es util, ya que por lo general los índices son strings extraídos de los datos actuales (consulta la [*pandas* reindex\n",
+        "documentation](http://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.reindex.html) para obtener un ejemplo en el que los valores de índice son nombres de navegadores).\n",
         "\n",
-        "In this case, allowing \"missing\" indices makes it easy to reindex using an external list, as you don't have to worry about\n",
-        "sanitizing the input."
+        "En este caso, permitir los índices \"faltantes\" facilita la reindexación mediante una lista externa, dado que no tienes que preocuparte por sanear directamente las entradas."
       ]
     }
   ]
