Creado mediante Colaboratory

--- a/4_DataWrangling/intro_to_pandas.ipynb
+++ b/4_DataWrangling/intro_to_pandas.ipynb
@@ -404,7 +404,7 @@
         "id": "zCOn8ftSyddH"
       },
       "source": [
-        "# Your code here"
+        "# Plantea tu codigo aqui"
       ],
       "execution_count": null,
       "outputs": []
@@ -533,7 +533,7 @@
         "id": "PN55GrDX0jzO"
       },
       "source": [
-        "# Your code here"
+        "# Plantea tu codigo aqui"
       ],
       "execution_count": null,
       "outputs": []
