--- a/5_DataMining/2_classification.ipynb
+++ b/5_DataMining/2_classification.ipynb
@@ -269,6 +269,44 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "9rYsnj2Kw614"
+      },
+      "source": [
+        "¿Qué tipo de iris tiene un sépalo de 3 cm x 5 cm y un pétalo de 4 cm x 2 cm?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3ZR6A2q9w9vz",
+        "outputId": "a15b412b-2db1-49a8-f467-51501e03a0bc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "from sklearn import neighbors\n",
+        "X, y = iris.data, iris.target\n",
+        "knn = neighbors.KNeighborsClassifier(n_neighbors=1)\n",
+        "knn.fit(X, y)\n",
+        "# hacemos la predicción\n",
+        "print(iris.target_names[knn.predict([[3, 5, 4, 2]])])"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['virginica']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "n1PBYeMv5fBt"
       },
       "source": [
