--- a/5_DataMining/2_classification.ipynb
+++ b/5_DataMining/2_classification.ipynb
@@ -46,9 +46,11 @@
         "\n",
         "# Aprendizaje de Máquina\n",
         "\n",
-        "El aprendizaje de máquina consiste en crear programas con parámetros ajustables que se ajustan automáticamente para mejorar su comportamiento adaptándose a los datos vistos anteriormente.\n",
         "\n",
-        "El aprendizaje de máquina puede considerarse un subcampo de la inteligencia artificial, ya que esos algoritmos pueden verse como bloques de construcción para hacer que las computadoras aprendan a comportarse de manera más inteligente al generalizar de alguna manera en lugar de almacenar y recuperar elementos de datos como lo haría un sistema de base de datos.\n"
+        "El aprendizaje de máquina puede considerarse un subcampo de la inteligencia artificial, ya que esos algoritmos pueden verse como bloques de construcción para hacer que las computadoras aprendan a comportarse de manera más inteligente al generalizar de alguna manera en lugar de almacenar y recuperar elementos de datos como lo haría un sistema de base de datos.\n",
+        "\n",
+        "\n",
+        "El aprendizaje de máquina consiste en crear programas con parámetros que se ajustan automáticamente, adaptándose a los datos vistos anteriormente.\n"
       ]
     },
     {
