--- a/5_DataMining/2_classification.ipynb
+++ b/5_DataMining/2_classification.ipynb
@@ -184,7 +184,7 @@
         "id": "2eYE-lLCvKTV"
       },
       "source": [
-        "La información sobre la clase de cada muestra se almacena en el atributo objetivo:"
+        "La información sobre la [clase](https://es.wikipedia.org/wiki/Clase_(inform%C3%A1tica)) se almacena en el atributo target:"
       ]
     },
     {
@@ -225,7 +225,7 @@
         "id": "Zs23M-6EveAQ"
       },
       "source": [
-        "Los nombres de las clases se almacenan en el último atributo, a saber, target_names:"
+        "Los nombres de las clases se almacenan en el último atributo, target_names:"
       ]
     },
     {
