--- a/3_MidtermProjects/musica.ipynb
+++ b/3_MidtermProjects/musica.ipynb
@@ -43,7 +43,9 @@
       },
       "source": [
         "# **El ritmo de la música**\n",
-        "Este conjunto de datos está compuesto por canciones de 2017 con atributos de la API de Spotify. Cada canción ha sido etiquetada por alguien que usó \"1\", lo que significa que le gusta la canción o \"0\" si no le gusta. Su tarea es construir un clasificador que pueda predecir las preferencias de los atributos de la canción.\n",
+        "Este *dataset* está compuesto por canciones de 2017 con atributos de la API de Spotify. Cada canción ha sido etiquetada por alguien que usó \"1\", cuando le gusta la canción o \"0\" si no le gusta. \n",
+        "\n",
+        "Su tarea es construir un clasificador que pueda predecir las preferencias de los atributos de la canción.\n",
         "\n",
         "Cada fila del *dataframe* representa una canción. Hay 16 columnas, 13 de las cuales son atributos de la canción, una columna para el nombre de la canción, una para el artista y una columna llamada \"destino\", que es la etiqueta mencionada anteriormente para la canción. Los atributos de la pista son: acústica, bailabilidad, duración, energía, instrumentalidad, clave, vivacidad, volumen, modo, habla, tempo, marca de tiempo, valencia (más información[aquí](https://developer.spotify.com/documentation/web-api/reference/tracks/get-audio-features/))."
       ]
