--- a/3_MidtermProjects/ProjectBCD/main.ipynb
+++ b/3_MidtermProjects/ProjectBCD/main.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  Breast Cancer Diagnostic\n",
-    "The goal of this project is to build a model able to predict the diagnosis of breast cancer tissues as malignant or benign. Features are computed from a digitized image of a fine needle aspirate (FNA) of a breast mass. They describe characteristics of the cell nuclei present in the image. Class distribution: 357 benign, 212 malignant. More info about this dataset [here](https://www.kaggle.com/uciml/breast-cancer-wisconsin-data)"
+    "#  Breast Cancer Diagnostic o Diagnóstico de cáncer de mama\n",
+    "El objetivo de este proyecto es construir un modelo capaz de predecir el diagnóstico de tejidos de cáncer de mama como malignos o benignos. Las características se calculan a partir de una imagen digitalizada de un aspirado con aguja fina (FNA, por sus siglas en inglés) de una masa mamaria. Describen características de los núcleos celulares presentes en la imagen. Distribución de clases: 357 benignas, 212 malignas. Más información sobre este conjunto de datos [aquí](https://www.kaggle.com/uciml/breast-cancer-wisconsin-data)"
+    
    ]
   },
   {
