--- a/3_MidtermProjects/ProjectBOM/main.ipynb
+++ b/3_MidtermProjects/ProjectBOM/main.ipynb
@@ -5,9 +5,9 @@
    "metadata": {},
    "source": [
     "# The Beat of the Music\n",
-    "This dataset is composed by 2017 songs with attributes from Spotify's API. Each song has been labeled by someone who used \"1\" meaning she likes the song or \"0\" if she doesn't like it. Your task is to build a classifier that can predict the preferences from the song atributes. \n",
+    "Este conjunto de datos está compuesto por canciones de 2017 con atributos de la API de Spotify. Cada canción ha sido etiquetada por alguien que usó \"1\", lo que significa que le gusta la canción o \"0\" si no le gusta. Su tarea es para construir un clasificador que pueda predecir las preferencias de los atributos de la canción. \n",
     "\n",
-    "Each row in the dataframe represents a song. There are 16 columns, 13 of which are song attributes, one column for song name, one for artist, and a column called \"target\" which is the aforementioned label for the song.  The track attributes are: acousticness, danceability, durationms, energy, instrumentalness, key, liveness, loudness, mode, speechiness, tempo, timesignature, valence (more info [here](https://developer.spotify.com/documentation/web-api/reference/tracks/get-audio-features/))."
+     "Cada fila en el dataframe representa una canción. Hay 16 columnas, 13 de las cuales son atributos de la canción, una columna para el nombre de la canción, una para el artista y una columna llamada \"objetivo\", que es la etiqueta mencionada anteriormente para la canción. Los atributos de la pista son: acústica, bailabilidad, duración, energía, instrumentalidad, clave, vivacidad, volumen, modo, habla, tempo, marca de tiempo, valencia (más información [aquí](https://developer.spotify.com/documentation/web-api/reference/tracks/get-audio-features/))."
    ]
   },
   {
