--- a/3_MidtermProjects/ProjectCCF/main.ipynb
+++ b/3_MidtermProjects/ProjectCCF/main.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Detecting Credit Card Fraud\n",
-    "It is important that credit card companies are able to recognize fraudulent credit card transactions so that customers are not charged for items that they did not purchase. The datasets contains transactions made by credit cards in September 2013 by european cardholders. This dataset presents transactions that occurred in two days, where we have 492 frauds out of 284,807 transactions. The dataset is highly unbalanced, the positive class (frauds) account for 0.172% of all transactions. The goal of this project is to build a model able to recognize fraudulent credit card transactions. More info [here](https://www.kaggle.com/mlg-ulb/creditcardfraud)."
+    "# Detecting Credit Card Fraud o Detectar fraudes con tarjetas de crédito\n",
+    "Es importante que las compañías de tarjetas de crédito puedan reconocer las transacciones fraudulentas de tarjetas de crédito para que no se cobre a los clientes por artículos que no compraron. Los conjuntos de datos contienen transacciones realizadas con tarjetas de crédito en septiembre de 2013 por titulares de tarjetas europeos. Este conjunto de datos presenta transacciones que ocurrieron en dos días, donde tenemos 492 fraudes de 284.807 transacciones. El conjunto de datos está muy desequilibrado, la clase positiva (fraudes) representa el 0,172% de todas las transacciones. El objetivo de este proyecto es construir un modelo capaz de reconocer transacciones fraudulentas con tarjetas de crédito. Más información [aquí](https://www.kaggle.com/mlg-ulb/creditcardfraud)."
    ]
   },
   {
