--- a/3_MidtermProjects/ProjectCXR/main.ipynb
+++ b/3_MidtermProjects/ProjectCXR/main.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# COVID-19 Detection in Chest X-Ray Images\n",
-    "The goal of this project is to build a model that identifies COVID-19, pneumonia in chest X-Ray images. The dataset is organized into 3 folders (COVID-19 cases, Normal , Pneumonia) and contains subfolders for each image category. There are 606 X-Ray images (JPEG). Data from [Mendeley](https://data.mendeley.com/datasets/fvk7h5dg2p/1). "
+    "# Detección de COVID-19 en imágenes de rayos X de tórax\n",
+    "El objetivo de este proyecto es construir un modelo que identifique COVID-19, neumonía en imágenes de rayos X de tórax. El conjunto de datos está organizado en 3 carpetas (casos COVID-19, Normal, Neumonía) y contiene subcarpetas para cada categoría de imagen. Hay 606 imágenes de rayos X (JPEG). Datos de [Mendeley](https://data.mendeley.com/datasets/fvk7h5dg2p/1)."
    ]
   },
   {
@@ -14,7 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Download and unzip\n",
+    "# Descarga y descomprimir\n",
     "dataroot = \"dataroot/\"\n",
     "!mkdir dataroot \n",
     "!wget -P dataroot https://md-datasets-cache-zipfiles-prod.s3.eu-west-1.amazonaws.com/fvk7h5dg2p-1.zip\n"
