--- a/3_MidtermProjects/ProjectFD/main.ipynb
+++ b/3_MidtermProjects/ProjectFD/main.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Predicting Flight Delays\n",
-    "The goal of this project is to build a model able to predict flight delays in the month of January. Take some time to understand the data, which airlines have the most percentage of delayed flights? Which airports have the most percentage of delayed flights? Is there any relationship between distance and delay? More info about this data [here](https://www.kaggle.com/divyansh22/flight-delay-prediction)"
+    "# Predecir retrasos en los vuelos \n",
+    "El objetivo de este proyecto es construir un modelo capaz de predecir retrasos de vuelos en el mes de enero. Tómese un tiempo para comprender los datos, ¿qué aerolíneas tienen el mayor porcentaje de vuelos retrasados? ¿Qué aeropuertos tienen el mayor porcentaje de vuelos retrasados? ¿Existe alguna relación entre la distancia y el retraso? Más información sobre estos datos [aquí](https://www.kaggle.com/divyansh22/flight-delay-prediction)"
    ]
   },
   {
