--- a/3_MidtermProjects/ProjectBEE/main.ipynb
+++ b/3_MidtermProjects/ProjectBEE/main.ipynb
@@ -4,9 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Trends in Beer Preferences\n",
-    "This dataset contains around 1.5 Millions reviews of beer scrapped from [BeerAdvocates](https://www.beeradvocate.com/)). Your goal is to characterize the dataset, group similar beers toghether and beeing able to recomend a beer in each group. Some driving questions you could try to answer using the data: If you had to pick 5 beers to recommend, which would you pick? Why? Which of the factors (taste, aroma, appearance, palate) are most important in determining the overall quality of a beer? If I usually enjoy IPAs, which beer should I try?"
-   ]
+    "# Tendencias en las preferencias de cerveza \n",
+    "Este conjunto de datos contiene alrededor de 1,5 millones de reseñas de cervezas descartadas de [BeerAdvocates](https://www.beeradvocate.com/)). Su objetivo es caracterizar el conjunto de datos, agrupar cervezas similares y poder recomendar una cerveza en cada una de las preguntas que podría intentar responder utilizando los datos: si tuviera que elegir 5 cervezas para recomendar, ¿cuál elegiría? ¿Por qué? ¿Cuáles de los factores (sabor, aroma, apariencia, paladar) son más importantes para determinar la la calidad general de una cerveza? Si por lo general disfruto de las IPA, ¿qué cerveza debo probar? "]
   },
   {
    "cell_type": "code",
