--- a/3_MidtermProjects/ProjectBEE/main.ipynb
+++ b/3_MidtermProjects/ProjectBEE/main.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Tendencias en las preferencias de cerveza \n",
-    "Este conjunto de datos contiene alrededor de 1,5 millones de reseñas de cervezas descartadas de [BeerAdvocates](https://www.beeradvocate.com/)). Su objetivo es caracterizar el conjunto de datos, agrupar cervezas similares y poder recomendar una cerveza en cada una de las preguntas que podría intentar responder utilizando los datos: si tuviera que elegir 5 cervezas para recomendar, ¿cuál elegiría? ¿Por qué? ¿Cuáles de los factores (sabor, aroma, apariencia, paladar) son más importantes para determinar la la calidad general de una cerveza? Si por lo general disfruto de las IPA, ¿qué cerveza debo probar? "]
+    "Este conjunto de datos contiene alrededor de 1,5 millones de reseñas de cervezas de [BeerAdvocates](https://www.beeradvocate.com/). Su objetivo es caracterizar el conjunto de datos, agrupar cervezas similares y poder recomendar una cerveza por cada una de las preguntas que podría intentar responder utilizando los datos: si tuviera que elegir 5 cervezas para recomendar, ¿cuál elegiría? ¿Por qué? ¿Cuáles de los factores (sabor, aroma, apariencia, paladar) son más importantes para determinar la la calidad general de una cerveza? Si por lo general disfruto de las IPA, ¿qué cerveza debo probar? "]
   },
   {
    "cell_type": "code",
