--- a/3_MidtermProjects/ProjectFN/main.ipynb
+++ b/3_MidtermProjects/ProjectFN/main.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classifying Fake News\n",
-    "Your goal is to use this data set to make an algorithm able to determine if an article is fake news or not. We provide you with 2 files, one with news labeled as fake, and another with news labeles as containing true information. You have four columns on each file title/text/subject/date.  "
+    "# Clasificación de noticias falsas \n",
+    "Su objetivo es utilizar estos datos para crear un algoritmo capaz de determinar si un artículo es una noticia falsa o no. Le proporcionamos 2 archivos, uno con noticias etiquetadas como falsas y otro con etiquetas de noticias que contienen información verdadera. Usted tienen cuatro columnas en cada título / texto / asunto / fecha de archivo".
    ]
   },
   {
