--- a/3_MidtermProjects/ProjectFN/main.ipynb
+++ b/3_MidtermProjects/ProjectFN/main.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Clasificación de noticias falsas \n",
-    "Su objetivo es utilizar estos datos para crear un algoritmo capaz de determinar si un artículo es una noticia falsa o no. Le proporcionamos 2 archivos, uno con noticias etiquetadas como falsas y otro con etiquetas de noticias que contienen información verdadera. Usted tienen cuatro columnas en cada título / texto / asunto / fecha de archivo".
+    "Su objetivo es utilizar estos datos para crear un algoritmo capaz de determinar si un artículo es una noticia falsa o no. Le proporcionamos 2 archivos, uno con noticias etiquetadas como falsas y otro con etiquetas de noticias que contienen información verdadera. Usted tienen cuatro columnas en cada archivo: título / texto / asunto / fecha."
    ]
   },
   {
