--- a/3_MidtermProjects/ProjectIMDB/main.ipynb
+++ b/3_MidtermProjects/ProjectIMDB/main.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Predicting IMDB Rating for Movies\n",
-    "The goal of this project is to build a model that predicts the IMDB rating score based on attributes as duration, actors or even titles. Take some time to understand the data, which movies have the highest score? Is there any relationship between the score and the cast? What about the movie director? More info about this data [here](https://www.kaggle.com/carolzhangdc/imdb-5000-movie-dataset)."
+    "# Predicción de la clasificación de IMDB para películas \n ",
+    "El objetivo de este proyecto es construir un modelo que prediga el puntaje de calificación de IMDB basado en atributos como duración, actores o incluso títulos. Tómese un tiempo para comprender los datos, ¿qué películas tienen el puntaje más alto? ¿Existe alguna relación entre el puntaje y el elenco? ¿Y el director de la película? Más información sobre estos datos [aquí](https://www.kaggle.com/carolzhangdc/imdb-5000-movie-dataset) ."
    ]
   },
   {
