--- a/3_MidtermProjects/ProjectNBA/main.ipynb
+++ b/3_MidtermProjects/ProjectNBA/main.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Predicting NBA Salaries\n",
-    "We will be working over two files. The first one contains players and corresponding stats. The second provides seasonal information about their salaries from 1985 to 2018. More details [here](https://www.kaggle.com/abdullahsahin/nba-salaries). Your goal is to build a model that predicts the NBA salaries. Feel free to work with only a subset of players, or attributes. "
+    "# Predecir los sueldos de la NBA \n ",
+    "Trabajaremos en dos archivos. El primero contiene jugadores y las estadísticas correspondientes. El segundo proporciona información estacional sobre sus salarios de 1985 a 2018. Su objetivo es construir un modelo que prediga los salarios de la NBA. Siéntase libre de trabajar solo con un subconjunto de jugadores o atributos. Más detalles [aquí](https://www.kaggle.com/abdullahsahin/nba-salaries). "
    ]
   },
   {
