--- a/3_MidtermProjects/ProjectPCB/main.ipynb
+++ b/3_MidtermProjects/ProjectPCB/main.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Chatbot\n",
-    "A chatbot is an intelligent piece of software that is capable of communicating and performing actions similar to a human. The goal of this project is to build a model that predicts answers using predefined patterns and responses. You are provided with a file named intents.json that contains these patterns. Words and classes files are provided as extra help. Feel free to make a more complex bot by extending the intents file. \n",
+    "Un chatbot es un software inteligente que es capaz de comunicarse y realizar acciones similares a las de un humano. El objetivo de este proyecto es construir un modelo que prediga respuestas usando patrones y respuestas predefinidos. Se le proporciona un archivo llamado intents.json que contiene estos patrones. Los archivos de palabras y clases se proporcionan como ayuda adicional. Siéntase libre de hacer un bot más complejo extendiendo el archivo de intenciones. \n",
     "\n",
     "#### Possible chat with your bot\n",
     "<code>\n",
