--- a/3_MidtermProjects/ProjectRBG/main.ipynb
+++ b/3_MidtermProjects/ProjectRBG/main.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Rainbow Guru\n",
-    "The dataset contains a CSV file that has 865 color names with their corresponding RGB (red, green and blue) values of the color. It also has the hexadecimal value of the color. The goal of this project is to build a model able to predict color name from their hexadecimal/RGB code. Data [source](https://en.wikipedia.org/wiki/Lists_of_colors)."
+    "El conjunto de datos contiene un archivo CSV que tiene 865 nombres de color con sus correspondientes valores RGB (rojo, verde y azul) del color. También tiene el valor hexadecimal del color. El objetivo de este proyecto es construir un modelo capaz de predecir el nombre del color a partir de su código hexadecimal / RGB. Fuente de [datos](https://en.wikipedia.org/wiki/Lists_of_colors)."
    ]
   },
   {
