--- a/3_MidtermProjects/ProjectRTS/main.ipynb
+++ b/3_MidtermProjects/ProjectRTS/main.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Recognizing Traffic Signs\n",
-    "The goal of this project is to build a model capable of determining the type of traffic sign that is displayed in an image captured under different real-life conditions and showing obstructions, poor lighting, or even the sign being far away from the camera. We provide you with labeled images already splited in three files (tran/val/test) and a predefined list of signs to recognise. "
+    "# Reconociendo señales de tráfico \n ",
+    "El objetivo de este proyecto es construir un modelo capaz de determinar el tipo de señal de tráfico que se muestra en una imagen capturada en diferentes condiciones de la vida real y que muestre obstrucciones, mala iluminación o incluso que la señal esté lejos de la cámara. Le proporcionamos imágenes etiquetadas ya divididas en tres archivos (entrenamiento / validación / prueba) y una lista predefinida de signos para reconocer."
    ]
   },
   {
