--- a/3_MidtermProjects/ProjectRTS/main.ipynb
+++ b/3_MidtermProjects/ProjectRTS/main.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Download and unzip\n",
+    "# Descargar datos \n",
     "dataroot = \"dataroot/\"\n",
     "!mkdir dataroot \n",
     "!wget -P dataroot https://raw.githubusercontent.com/emmanueliarussi/DataScienceCapstone/master/3_MidtermProjects/ProjectRTS/data/data_1.zip\n",
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Unzip\n",
+    "# Descomprimir \n",
     "import zipfile\n",
     "with zipfile.ZipFile(dataroot+\"data_1.zip\",\"r\") as zip_ref:\n",
     "    zip_ref.extractall(dataroot)\n",
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load sign names\n",
+    "# Cargar nombres de las señales \n",
     "import pandas as pd\n",
     "df = pd.read_csv(\"https://raw.githubusercontent.com/emmanueliarussi/DataScienceCapstone/master/3_MidtermProjects/ProjectRTS/data/signnames.csv\")\n",
     "signnames = pd.Series(df.SignName.values,index=df.ClassId).to_dict()\n",
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load images\n",
+    "# cargar las imágenes \n",
     "import pickle\n",
     "signimages = pickle.load( open( dataroot+\"train.p\", \"rb\" ) )"
    ]
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Preview image\n",
+    "# ver imagen \n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import cv2\n",
