--- a/3_MidtermProjects/ProjectTSS/main.ipynb
+++ b/3_MidtermProjects/ProjectTSS/main.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Spotify Top Songs\n",
-    "The dataset contains the daily ranking of the 200 most listened songs in 53 countries from 2017 and 2018 in Spotify. It contains more than 2 million rows, which comprises 6629 artists, 18598 songs for a total count of one hundred five billion streams count. The goal of this project is to understand which features make a song popular. To that end, you are also provided with a file cointaining data about music attributes (i.e. speechiness,acousticness, tempo) for several popular songs. Given the large size of the dataset, feel free to simplify your task by working with rankings from only one country or for a single year. More info about this data [here](https://www.kaggle.com/edumucelli/spotifys-worldwide-daily-song-ranking). "
+    "El dataset contiene la clasificación diaria de las 200 canciones más escuchadas en 53 países de 2017 y 2018 en Spotify. Contiene más de 2 millones de filas, que comprende 6629 artistas, 18598 canciones para un recuento total de ciento cinco mil millones de streams. El objetivo de este proyecto es comprender qué características hacen que una canción sea popular. Con ese fin, también se le proporciona un archivo que contiene datos sobre los atributos de la música (es decir, habla, acústica, tempo) de varias canciones populares. Dado el gran tamaño del conjunto de datos, no dude en simplificar su tarea trabajando con clasificaciones de un solo país o de un solo año. Más información sobre estos datos [aquí](https://www.kaggle.com/edumucelli/spotifys-worldwide-daily-song-ranking). "
    ]
   },
   {
