--- a/3_MidtermProjects/ProjectUSA/main.ipynb
+++ b/3_MidtermProjects/ProjectUSA/main.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Violent Crime Rates by US State\n",
-    "This data set contains statistics, in arrests per 100,000 residents for assault, murder, and rape in each of the 50 US states in 1973. Also given is the percent of the population living in urban areas. The goal of this project is to identify hierarchies of clusters of US states according to violent crime rates data [here](https://stat.ethz.ch/R-manual/R-devel/library/datasets/html/USArrests.html). Feel free to augment this data set with other sources. "
+    "# Tasas de delitos violentos por estado de EE.UU. \n",
+    "Este conjunto de datos contiene estadísticas, en arrestos por cada 100,000 residentes por asalto, asesinato y violación en cada uno de los 50 estados de EE. UU. En 1973. También se da el porcentaje de la población que vive en áreas urbanas. El objetivo de este proyecto es identificar jerarquías de grupos de estados de EE. UU. Según los datos de tasas de delitos violentos. Siéntase libre de aumentar este conjunto de datos con otras fuentes [info](https://stat.ethz.ch/R-manual/R-devel/library/datasets/html/USArrests.html).  "
    ]
   },
   {
