--- a/3_MidtermProjects/ProjectWC/main.ipynb
+++ b/3_MidtermProjects/ProjectWC/main.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Wholesale Customers\n",
-    "The goal of this project is to identify and describe the various customer segments hidden in the data based on their annual spending on diverse product categories, like milk, grocery, region, etc. More info about this dataset[here](https://archive.ics.uci.edu/ml/datasets/Wholesale+customers)."
+    "# Clientes al por mayor \n",
+    "El objetivo de este proyecto es identificar y describir los distintos segmentos de clientes ocultos en los datos en función de su gasto anual en diversas categorías de productos, como leche, comestibles, región, etc. Más información sobre este conjunto de datos [aquí](https://archive.ics.uci.edu/ml/datasets/Wholesale+customers)."
    ]
   },
   {
